# data-observability-installer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  NOTICE  README.md  dk-installer.py  pyproject.toml
.github/workflows/: pull_request.yml  python-job.yml  release_exe.yml
demo/demo/: demo_helper.py  heartbeat_demo.py  main.py  observability_demo.py  testgen_demo.py
demo/deploy/: Dockerfile  build-image  docker-bake.json  requirements.txt
demo/input_data/: data_tests.csv  demo_pipeline_tests.csv
docs/: build_windows_installer.md  local_development.md
tests/: conftest.py  installer.py  pytest.ini  requirements.txt  test_action.py  test_analytics_wrapper.py  test_compose_delete.py  test_install_type.py  test_installer.py  test_multistep_action.py  test_obs_delete.py  test_obs_demo.py  test_obs_expose.py  test_obs_install.py  test_obs_upgrade.py  test_stream_iterator.py  test_tg_delete.py  test_tg_install.py  test_tg_pip_delete.py  test_tg_pip_demo.py  test_tg_pip_install.py  test_tg_pip_upgrade.py  test_tg_run_demo.py  test_tg_start.py  test_tg_upgrade.py  test_uv_bootstrap.py
