[project]
name = "data-observability-installer"
version = "1.1.0"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pyinstaller==6.10.0",
    "ruff==0.11.8",
]

test = [
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
]

[tool.pytest.ini_options]
python_classes = "ˆ$"
testpaths = [
    "tests",
]

markers = [
    "unit",
    "integration",
]

[tool.ruff]
line-length = 120
include = [
    "dk-installer.py",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
